apps/vikunja/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: vikunja
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: default-authentik-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: vikunja.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vikunja
                port:
                  number: 3456
    - host: vikunja.pj-home-lab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vikunja
                port:
                  number: 3456
